# rayTracing

./: .gitignore  CMakeLists.txt  CMakeSettings.json
app/: CMakeLists.txt
app/src/: main.cpp  main_object.cpp
lib/: CMakeLists.txt
lib/include/: camera.hpp  flat_image.hpp  hitable.hpp  material.hpp  object.hpp  ray.hpp  vec_4f.hpp  world.hpp
lib/src/: flat_image.cpp  material.cpp  object.cpp  ray.cpp  ray_tracing.cpp  vec_4f.cpp
test/: CMakeLists.txt
test/include/: catch.hpp
test/src/: test_vec_4f.cpp
